--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "next-starter",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@8.7.5",
+  "packageManager": "npm@8.7.5",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,10 +12,11 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:seed": "prisma db seed",
-    "postinstall": "pnpm run db:generate"
+    "postinstall": "npm run db:generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.2",
+    "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -33,7 +34,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.279.0",
-    "next": "13.4.19",
+    "next": "^13.5.6",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
